--- a/frontend/src/app/pages/hero/hero.component.html
+++ b/frontend/src/app/pages/hero/hero.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="flex gap-8 flex-col justify-center items-center pt-8">
     <a
-      href=""
+      href="/register"
       class="w-70 min-w-60 text-center p-2 bg-yellow-500 text-white-500 border-0 rounded-sm dark:bg-dark_red-500 dark:text-white-500 text-3xl"
       >Regisztrálj</a
     >
