--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
     
     @if (isCompany.getIsCompany()) {
       <a
-      href="/hirdetes"
+      href="/publish"
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark-blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
       >Hírdetés</a
     >
