--- a/frontend/src/app/pages/login/login-form/login-form.component.html
+++ b/frontend/src/app/pages/login/login-form/login-form.component.html
@@ -35,7 +35,7 @@
       class="bg-dark_red-500 text-white-500 p-2 pl-6 pr-8 font-medium text-xl rounded-xl cursor-pointer flex justify-center gap-1.5"
       >
       <mat-icon>search</mat-icon>
-      Regisztráció
+      Bejelentkezés
     </button>
     
   </div>
