--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -2,9 +2,9 @@
   class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex justify-center p-56 pt-32 gap-10"
 >
   <div class="bg-white-500 p-5 rounded-2xl w-[40%] flex flex-col align-middle justify-center">
-    <h1 class="text-dark_blue-500 font-medium m-auto text-2xl pb-10">Regisztráció</h1>
+    <h1 class="text-dark_blue-500 font-medium m-auto text-2xl pb-10">Bejelentkezés</h1>
 
-    <app-login-form (valid_login)="$event"></app-login-form>
+    <app-login-form (valid_login)="handle_login($event)"></app-login-form>
   </div>
 
 </div>
