szures letrehozva searchen belul

--- a/frontend/src/app/pages/login/login-form/login-form.component.html
+++ b/frontend/src/app/pages/login/login-form/login-form.component.html
@@ -18,7 +18,7 @@
     class="w-[80%] text-dark_blue-500 p-1 relative border-b-2 group invalid:border-dark_red-500 invalid:text-dark_red-500 flex items-end"
   >
     <input
-      type="text"
+      type="password"
       placeholder="Jelszó"
       class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
       minlength="2"
