--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -14,29 +14,38 @@
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark-blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
       >Hírdetés</a
     >
+     @if (!isLogged.getLoginStatus()){
       <button
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500 hover:cursor-pointer"
       (click)="flip_isCompany()"
     >
       Cégeknek
     </button>
+     }
     }@else {
       <a
       href="/search"
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark-blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
       >Keresés</a
     >
+    @if (!isLogged.getLoginStatus()){
       <button
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500 hover:cursor-pointer"
       (click)="flip_isCompany()"
     >
       Álláskeresőnek
     </button>
+  }
     } @if (isLogged.getLoginStatus()) {
     <a
       href=""
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
       >Profil</a
+    >
+    <a
+      class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
+      (click)="isLogged.logOut()"
+      >Kijelentkezés</a
     >
     }@else{
     <a
