--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div
+  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex justify-between p-56 pt-32"
+>
+  <div class="bg-white-500">
+    
+  </div>
+</div>
