--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -38,12 +38,12 @@
   }
     } @if (isLogged.getLoginStatus()) {
     <a
-      href=""
+      href="/profile"
       class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
       >Profil</a
     >
     <a
-      class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500"
+      class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark_blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500 hover:cursor-pointer"
       (click)="isLogged.logOut()"
       >Kijelentkezés</a
     >
