profil adatainak lekérése, elküldés frontendbe.

--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -2,6 +2,18 @@
   class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex justify-between p-56 pt-32"
 >
   <div class="bg-white-500">
+    <img src="" alt="Felhasználó avatárja" />
+    <h1>Email cím: {{ user.email }}</h1>
+    @if ( true ) {
     
+      <!--TODO Allaskereso adatait feltölteni. -->
+    
+      <!-- TODO Allaskereso adatainak módosítása -->
+    }@else {
+    
+      <!--TODO Ceg adatait feltölteni. -->
+    
+      <!-- TODO Cég adatainak módosítása -->
+    }
   </div>
 </div>
