Profil szerkesztés formok

--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -2,29 +2,42 @@
   class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex justify-center p-56 pt-32"
 >
   @if ( user_allas || user_ceg) {
-  <div class="bg-white-500 p-4 rounded-2xl grid grid-cols-2">
+  <div
+    class="bg-white-500 p-8 rounded-2xl grid grid-cols-2 gap-x-4 gap-y-8 w-[50%]"
+  >
     @if ( user_allas === null ) {
-    <!--TODO Ceg adatait feltölteni. -->
     <section>
-      <img src="" alt="Felhasználó avatárja" />
-    <h1>Email cím: {{ user_email }}</h1>
-      <h1>Cég neve: {{ user_ceg?.neve }}</h1>
-      <h2>Cég neve: {{ user_ceg?.adoazonosito }}</h2>
-      <p>Cég értékelése: {{ user_ceg?.ertekeles }}</p>
+      <mat-icon class="big-icon text-dark_blue-500 fill-dark_blue-500 mb-2">account_circle</mat-icon>
+      <h1 class="text-dark_blue-500 font-medium">Email cím: <span class="text-dark_red-500">{{ user_email }}</span></h1>
+      <h1 class="text-dark_blue-500 font-medium">Cég neve: <span class="text-dark_red-500">{{ user_ceg?.neve }}</span></h1>
+      <h2 class="text-dark_blue-500 font-medium">Cég adóazonosítója: <span class="text-dark_red-500">{{ user_ceg?.adoazonosito }}</span></h2>
+      <p class="text-dark_blue-500 font-medium">Cég értékelése: <span class="text-dark_red-500">{{ user_ceg?.ertekeles }}</span></p>
     </section>
-    <!-- TODO Cég adatainak módosítása -->
-
+    <app-ceg-form (valid_form)="modifyCeg($event)"></app-ceg-form>
     }@else {
-    <!--TODO Allaskereso adatait feltölteni. -->
-    <section>
-      <img src="" alt="Felhasználó avatárja" />
-      <h1>Email cím: {{ user_email }}</h1>
-      <h1>Felhasználó neve: {{ user_allas.nev }}</h1>
-      <h2>Végzettség: {{ user_allas.vegzettseg }}</h2>
-      <p>Státusz: {{ user_allas.statusz }}</p>
+    <section class="flex flex-col items-start gap-4">
+      <mat-icon class="big-icon text-dark_blue-500 fill-dark_blue-500">account_circle</mat-icon>
+      <div>
+        <h1 class="text-dark_blue-500 font-medium">
+          Email cím: <span class="text-dark_red-500">{{ user_email }}</span>
+        </h1>
+        <h1 class="text-dark_blue-500 font-medium">
+          Felhasználó neve:
+          <span class="text-dark_red-500">{{ user_allas.nev }}</span>
+        </h1>
+        <h2 class="text-dark_blue-500 font-medium">
+          Végzettség:
+          <span class="text-dark_red-500">{{ user_allas.vegzettseg }}</span>
+        </h2>
+        <p class="text-dark_blue-500 font-medium">
+          Státusz:
+          <span class="text-dark_red-500">{{ user_allas.statusz }}</span>
+        </p>
+      </div>
     </section>
-    <!-- TODO Allaskereso adatainak módosítása -->
-    
+    <app-allaskereso-form
+      (valid_form)="modifyAllaskereso($event)"
+    ></app-allaskereso-form>
     }
   </div>
   }
