--- a/frontend/src/app/pages/profile/ceg-form/ceg-form.component.html
+++ b/frontend/src/app/pages/profile/ceg-form/ceg-form.component.html
@@ -47,6 +47,35 @@
   </mat-icon>
 </fieldset>
 
+<fieldset
+    class="w-[80%] text-dark_blue-500 p-1 relative border-b-2 group invalid:border-dark_red-500 invalid:text-dark_red-500 flex items-end"
+  >
+    <input
+      type="password"
+      placeholder="Jelszó"
+      class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
+      minlength="6"
+      formControlName="jelszo1"
+    />
+    <mat-icon class="absolute left-1 top-[0.625lh] transform -translate-y-1/2">
+      lock
+    </mat-icon>
+  </fieldset>
+  <fieldset
+    class="w-[80%] text-dark_blue-500 p-1 relative border-b-2 group invalid:border-dark_red-500 invalid:text-dark_red-500 flex items-end"
+  >
+    <input
+      type="password"
+      placeholder="Jelszó ismét"
+      class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
+      minlength="6"
+      formControlName="jelszo2"
+    />
+    <mat-icon class="absolute left-1 top-[0.625lh] transform -translate-y-1/2">
+      lock
+    </mat-icon>
+  </fieldset>
+
 
 <div class="pt-10">
   <button
