--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -3,7 +3,7 @@
 >
   <div class="bg-white-500 p-5 rounded-2xl w-[40%] flex flex-col align-middle justify-center">
     <h1 class="text-dark_blue-500 font-medium m-auto text-2xl">Regisztráció</h1>
-    <h2 class="text-dark_blue-500 font-medium m-auto text-xl pb-10">{{(isCompany.getIsCompany())? "Cégeknek": "Álláskeresőknek"}}</h2>
+    <h2 class="text-dark_blue-500 font-medium m-auto text-xl pb-10">{{(isCompany.getIsCompany())? "Cégnek": "Álláskeresőnek"}}</h2>
 
     @if (isCompany.getIsCompany()) {
       <app-ceg-form (valid_register)="register_user($event)"></app-ceg-form>
