profile ceg allasok listazasa ++

--- a/frontend/src/app/pages/profile/ceg-form/ceg-form.component.html
+++ b/frontend/src/app/pages/profile/ceg-form/ceg-form.component.html
@@ -1,4 +1,4 @@
-<form class="flex flex-col items-center gap-4 w-full" [formGroup]="register_form" (ngSubmit)="Submit()">
+<form class="flex flex-col items-end gap-4 w-full" [formGroup]="register_form" (ngSubmit)="Submit()">
 
       
   <fieldset
