--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -6,7 +6,7 @@
     class="bg-white-500 p-8 rounded-2xl grid grid-col-2 gap-x-4 gap-y-8 w-[70%]"
   >
     @if ( user_allas === null ) {
-    <section class="col-row-2">
+    <section class="">
       <mat-icon class="big-icon text-dark_blue-500 fill-dark_blue-500 mb-2">account_circle</mat-icon>
       <h1 class="text-dark_blue-500 font-medium">Email cím: <span class="text-dark_red-500">{{ user_email }}</span></h1>
       <h1 class="text-dark_blue-500 font-medium">Cég neve: <span class="text-dark_red-500">{{ user_ceg?.neve }}</span></h1>
@@ -14,6 +14,7 @@
       <p class="text-dark_blue-500 font-medium">Cég értékelése: <span class="text-dark_red-500">{{ user_ceg?.ertekeles }}</span></p>
     </section>
     <app-ceg-form (valid_form)="modifyCeg($event)"></app-ceg-form>
+    <app-work-list class="col-span-2"></app-work-list>
     }@else {
     <section class="flex flex-col items-start gap-4">
       <mat-icon class="big-icon text-dark_blue-500 fill-dark_blue-500">account_circle</mat-icon>
