adatmódosítás álláskeresűnek működik

--- a/frontend/src/app/pages/profile/cv-form/cv-form.component.html
+++ b/frontend/src/app/pages/profile/cv-form/cv-form.component.html
@@ -32,7 +32,8 @@
     </fieldset>
 
     <button
-    type="submit"
+    type="button"
+    (click)="updateCVs()"
     class="bg-dark_red-500 text-white-500 p-2 pl-6 pr-8 font-medium text-xl rounded-xl cursor-pointer flex justify-center gap-1.5"
   >
     <mat-icon>upload_file</mat-icon>
