--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -39,7 +39,8 @@
     <app-allaskereso-form
       (valid_form)="modifyAllaskereso($event)"
     ></app-allaskereso-form>
-    <app-cv-form class="col-span-2"></app-cv-form>
+    <app-cv-form class="col-span-2"
+    ></app-cv-form>
   }
 </div>
 <app-error-msg [error_msg]="error_msg" [appDisplay]="show_error"></app-error-msg>
