--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -8,5 +8,6 @@
   </div>
 
   <app-error-msg [appDisplay]="showError" [error_msg]="error_msg"></app-error-msg>
+  <app-success-msg [appDisplay]="showSuccess" [success_msg]="success_msg"></app-success-msg>
 
 </div>
