--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex justify-center p-56 pt-32 gap-10"
+  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col justify-center items-center p-56 pt-32 gap-10 "
 >
   <div class="bg-white-500 p-5 rounded-2xl w-[40%] flex flex-col align-middle justify-center">
     <h1 class="text-dark_blue-500 font-medium m-auto text-2xl">Regisztráció</h1>
@@ -11,4 +11,6 @@
       <app-allaskereso-form (valid_register)="register_user($event)"></app-allaskereso-form>
     }
   </div>
+  <app-error-msg [appDisplay]="showError" [error_msg]="error_msg"></app-error-msg>
+  <app-success-msg [appDisplay]="showSuccess" [success_msg]="success_msg"></app-success-msg>
 </div>
