cv add-delete fixed

--- a/frontend/src/app/pages/profile/cv-form/cv-form.component.html
+++ b/frontend/src/app/pages/profile/cv-form/cv-form.component.html
@@ -25,7 +25,7 @@
       <div class="hover:text-dark_red-500 translate-[0.25lh]">
         <mat-icon
           class="z-10 hover:text-dark_red-500 hover:cursor-pointer"
-          (click)="addcv(cv.value)"
+          (click)="showCV(cv.value)"
           >add</mat-icon
         >
       </div>
@@ -33,7 +33,7 @@
 
     <button
     type="button"
-    (click)="updateCVs()"
+    (click)="insertCV()"
     class="bg-dark_red-500 text-white-500 p-2 pl-6 pr-8 font-medium text-xl rounded-xl cursor-pointer flex justify-center gap-1.5"
   >
     <mat-icon>upload_file</mat-icon>
