--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -3,7 +3,7 @@
 >
   @if ( user_allas || user_ceg) {
   <div
-    class="bg-white-500 p-8 rounded-2xl grid grid-col-2 gap-x-4 gap-y-8 w-[70%]"
+    class="bg-white-500 p-8 rounded-2xl grid grid-col-2 gap-x-4 gap-y-8 w-[70%] w-auto"
   >
     @if ( user_allas === null ) {
     <section class="">
