cv feltoltes frontend frissitve

--- a/frontend/src/app/pages/profile/cv-form/cv-form.component.html
+++ b/frontend/src/app/pages/profile/cv-form/cv-form.component.html
@@ -31,13 +31,13 @@
       </div>
     </fieldset>
 
-    <button
+    <!-- <button
     type="button"
     (click)="insertCV()"
     class="bg-dark_red-500 text-white-500 p-2 pl-6 pr-8 font-medium text-xl rounded-xl cursor-pointer flex justify-center gap-1.5"
   >
     <mat-icon>upload_file</mat-icon>
     Módosítás
-  </button>
+  </button> -->
   </form>
 </section>
