--- a/frontend/src/app/pages/work-details/work-details.component.html
+++ b/frontend/src/app/pages/work-details/work-details.component.html
@@ -18,6 +18,7 @@
   </div>
 
   <h2 class="text-dark_blue-500 font-medium text-3xl">
+    <!-- TODO -->
     {{
       work.getWork()?.terulet_id === 5
         ? "Szeged"
@@ -25,13 +26,14 @@
         ? "Budapest"
         : "Ismeretlen"
     }}
-    <!--TODO Pipeot írni ehez a szépséghez-->
+    <!-- ! -->
   </h2>
   <h2 class="text-dark_blue-500 font-medium text-3xl">
+    <!-- TODO -->
     {{
       work.getWork()?.ceg_adoazonosito  
     }}
-    <!--TODO Pipeot írni ehez a szépséghez-->
+    <!-- ! -->
   </h2>
 </div>
 
