Cv dialog panelek RENDESEN mukodnek

--- a/frontend/src/app/pages/profile/cv-form/cv-form.component.html
+++ b/frontend/src/app/pages/profile/cv-form/cv-form.component.html
@@ -25,7 +25,7 @@
       <div class="hover:text-dark_red-500 translate-[0.25lh]">
         <mat-icon
           class="z-10 hover:text-dark_red-500 hover:cursor-pointer"
-          (click)="showCV(cv.value)"
+          (click)="insertCV(cv.value)"
           >add</mat-icon
         >
       </div>
