allaslehetosegek listazasa cegnek, allaskeresonek

--- a/frontend/src/app/pages/search/search-filter-dialog/search-filter-dialog.component.html
+++ b/frontend/src/app/pages/search/search-filter-dialog/search-filter-dialog.component.html
@@ -9,7 +9,7 @@
       <fieldset class="col-span-2 p-1 border-b-dark_blue-500 border-b-2">
         <input type="text" formControlName="company"
         min="2"
-        placeholder="kovetelmeny"
+        placeholder="Cég"
         class="text-dark_blue-500 font-medium focus:outline-0">
         
       </fieldset>
