admin login done

--- a/frontend/src/app/pages/admin/admin-login/admin-login.component.html
+++ b/frontend/src/app/pages/admin/admin-login/admin-login.component.html
@@ -1,7 +1,6 @@
-<!-- <div
+<div
   class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center justify-center p-56 pt-32 gap-10"
 >
-<h1>hello world</h1>
   <div class="bg-white-500 p-4 rounded-2xl w-[40%] flex flex-col align-middle justify-center">
     <h1 class="text-dark_blue-500 font-medium m-auto text-2xl">Bejelentkezés</h1>
     <h2 class="text-dark_blue-500 font-medium m-auto text-xl pb-10">Admin</h2>
@@ -9,6 +8,5 @@
   </div>
 
   <app-error-msg [appDisplay]="showError" [error_msg]="error_msg"></app-error-msg>
-  <app-success-msg [appDisplay]="showSuccess" [success_msg]="success_msg"></app-success-msg>
-
-</div> -->
+ 
+</div>
