--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -2,9 +2,10 @@
   class="w-full bg-dark_blue-500 dark:bg-dark-gray-500 flex justify-between p-56 pt-16 mx-0"
 >
   <div class="">
-    <h1 class="text-white-500 font-medium">
+    <h1 class="text-white-500 font-medium pb-2">
       <a href="">ProfSession.hu</a>
     </h1>
+    <a href="/admin_login" class="text-white-500 font-normal">Admin</a>
     <!--TODO Mailto-->
   </div>
   <div class="">
