--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -3,9 +3,9 @@
 >
   <div class="bg-white-500 p-5 rounded-2xl w-[40%] flex flex-col align-middle justify-center">
     <h1 class="text-dark_blue-500 font-medium m-auto text-2xl">Regisztráció</h1>
-    <h2 class="text-dark_blue-500 font-medium m-auto text-xl pb-10">{{(isCompany.getIsCompany())? "Cégnek": "Álláskeresőnek"}}</h2>
+    <h2 class="text-dark_blue-500 font-medium m-auto text-xl pb-10">{{(login_service.getRole() == "ceg")? "Cégnek": "Álláskeresőnek"}}</h2>
 
-    @if (isCompany.getIsCompany()) {
+    @if (login_service.getRole() == "ceg") {
       <app-ceg-form (valid_register)="register_user($event)"></app-ceg-form>
     }@else {
       <app-allaskereso-form (valid_register)="register_user($event)"></app-allaskereso-form>
