ceg allas letrehozas kezdetleges

--- a/frontend/src/app/pages/publish/publish.component.html
+++ b/frontend/src/app/pages/publish/publish.component.html
@@ -80,6 +80,10 @@
       
       </div>
     </form>
+    <app-error-msg
+    [error_msg]="error_msg"
+    [appDisplay]="show_error"
+    ></app-error-msg>
   </div>
 
 </div>
