Profil adminra szabva is.

--- a/frontend/src/app/pages/admin/main-page/main-page.component.html
+++ b/frontend/src/app/pages/admin/main-page/main-page.component.html
@@ -1,5 +1,7 @@
 <div
-  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center justify-center p-56 pt-32 gap-10"
+  class="bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center justify-center p-56 pt-32 gap-10"
 >
-<p class="text-white-500">main-page works!</p>
+  <div class="bg-white-500 rounded-2xl p-4 w-[70%]">
+    <h1 class="mr-auto ml-auto">Elfogadásra váró hírdetések.</h1>
+  </div>
 </div>
