allasok a cegnel betoltodnek

--- a/frontend/src/app/pages/profile/admin-datas/admin-datas.component.html
+++ b/frontend/src/app/pages/profile/admin-datas/admin-datas.component.html
@@ -1,9 +1,9 @@
 <div class="bg-white-500 rounded-2xl">
   <h1 class="text-dark_blue-500 font-medium">
-    Email cím: <span class="text-dark_red-500">{{ admin_data.email }}</span>
+    Email cím: <span class="text-dark_red-500">{{ admin_data?.email }}</span>
   </h1>
   <h1 class="text-dark_blue-500 font-medium">
     Moderátor neve:
-    <span class="text-dark_red-500">{{ admin_data.neve }}</span>
+    <span class="text-dark_red-500">{{ admin_data?.neve }}</span>
   </h1>
 </div>
