--- a/frontend/src/app/pages/profile/allaskereso-datas/allaskereso-datas.component.html
+++ b/frontend/src/app/pages/profile/allaskereso-datas/allaskereso-datas.component.html
@@ -4,19 +4,19 @@
   >
   <div class="text-base pt-14">
     <h1 class="text-dark_blue-500 font-medium">
-      Email cím: <span class="text-dark_red-500">{{ allaskereso_data.email }}</span>
+      Email cím: <span class="text-dark_red-500">{{ allaskereso_data?.email }}</span>
     </h1>
     <h1 class="text-dark_blue-500 font-medium">
       Felhasználó neve:
-      <span class="text-dark_red-500">{{ allaskereso_data.nev }}</span>
+      <span class="text-dark_red-500">{{ allaskereso_data?.nev }}</span>
     </h1>
     <h2 class="text-dark_blue-500 font-medium">
       Végzettség:
-      <span class="text-dark_red-500">{{ allaskereso_data.vegzettseg }}</span>
+      <span class="text-dark_red-500">{{ allaskereso_data?.vegzettseg }}</span>
     </h2>
     <p class="text-dark_blue-500 font-medium">
       Státusz:
-      <span class="text-dark_red-500">{{ allaskereso_data.statusz }}</span>
+      <span class="text-dark_red-500">{{ allaskereso_data?.statusz }}</span>
     </p>
   </div>
 </section>
