--- a/frontend/src/app/pages/profile/ceg-datas/ceg-datas.component.html
+++ b/frontend/src/app/pages/profile/ceg-datas/ceg-datas.component.html
@@ -3,17 +3,17 @@
     >account_circle</mat-icon
   >
   <h1 class="text-dark_blue-500 font-medium">
-    Email cím: <span class="text-dark_red-500">{{ ceg_data.email }}</span>
+    Email cím: <span class="text-dark_red-500">{{ ceg_data?.email }}</span>
   </h1>
   <h1 class="text-dark_blue-500 font-medium">
-    Cég neve: <span class="text-dark_red-500">{{ ceg_data.neve }}</span>
+    Cég neve: <span class="text-dark_red-500">{{ ceg_data?.neve }}</span>
   </h1>
   <h2 class="text-dark_blue-500 font-medium">
     Cég adóazonosítója:
-    <span class="text-dark_red-500">{{ ceg_data.adoazonosito }}</span>
+    <span class="text-dark_red-500">{{ ceg_data?.adoazonosito }}</span>
   </h2>
   <p class="text-dark_blue-500 font-medium">
     Cég értékelése:
-    <span class="text-dark_red-500">{{ ceg_data.ertekeles }}</span>
+    <span class="text-dark_red-500">{{ ceg_data?.ertekeles }}</span>
   </p>
 </section>
