--- a/frontend/src/app/pages/publish/publish.component.html
+++ b/frontend/src/app/pages/publish/publish.component.html
@@ -1,7 +1,7 @@
 <app-add-city-dialog [appDisplay]="showAddCity" (show)="showAddCity = $event"></app-add-city-dialog>
 
 <div
-  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex justify-center p-56 pt-32"
+  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center justify-center p-56 pt-32"
 >
 
   <div class="bg-white-500 p-4 rounded-2xl flex flex-col w-[80%]">
@@ -71,7 +71,7 @@
         />
       </fieldset>
       <fieldset class="flex gap-4 items-center">
-        <select matNativeControl formControlName="varos" class="inline-block w-full px-4 py-2 text-sm text-gray-700 bg-white border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-dark_red-500 focus:border-dark_red-500 ">
+        <select matNativeControl formControlName="varos" class="inline-block w-full px-4 py-2 text-sm text-dark_blue-500 border-2 border-dark_blue-500 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-dark_red-500 focus:border-dark_red-500 outline-dark_blue-500 focus:outline-0">
           <option value="" disabled selected hidden>Város</option>
           @for(varos of cities; track varos){
             <option value="{{varos.VAROS}}">{{varos.VAROS}}</option>
