Admin elbíráló oldalon megjelennek a munkák, cég névvel együtt (pipe)

--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -27,7 +27,7 @@
         }
       }
       @case ("admin") {
-        <h1>ADMIN</h1>
+        <a href="/admin_home" class="font-medium text-xl p-2 pt-1 pb-1 rounded-sm transition text-dark-blue-500 dark:text-white-500 hover:bg-dark_blue-500 hover:text-white-500 dark:hover:bg-white-500 dark:hover:text-dark_blue-500">Admin</a>
       }
       @default {
         <h1>baj</h1>
